--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,4 @@ pygments: true
 
 name: Rodrigo Araujo's blog
 description: Few notes and thoughts on computer science, mathematics and technology
-url: http://rodrigoaraujo.me/blog
+url: http://rodrigoaraujo.me
