Add tracking code and id

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ url-pretty: "rodrigoaraujo.me"  # eg. "deanattali.com/beautiful-jekyll"
 #disqus: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-38327934-3"
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
